Updated Accomplishment Pages

--- a/bio.html
+++ b/bio.html
@@ -82,7 +82,7 @@
 									</header>
 									<img src="images/tsbde-logo.png" alt="Registered Dental Assistant" height="200" width="200" />
 									<p>I became a <strong>Registered Dental Assistant (RDA)</strong>. My wife, a Registered Dental Hygeinist of several years, and I wanted to open a school to register Dental Assistants. She told me that I needed to become an RDA myself, before I could teach it in a school.</p>
-									<p>We ran the school for a few months, but both of us were working fulltime. The school became too much of a time burden with our work schedules.</p>
+									<p>We ran the school for a few months, but with both of us were working fulltime, the school became too much of a burden.</p>
 								</article>
 								<article>
 									<header>
