--- a/bio3.html
+++ b/bio3.html
@@ -55,7 +55,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">November 2005</span>
+										<span class="date">November 13, 2005</span>
 										<h2>I Graduated with my Master of Arts Degree, Adult Education</h2>
 									</header>
 									<img src="images/university-of-phoenix-logo.png" alt="University of Phoenix" height="134" width="300" />
