--- a/bio4.html
+++ b/bio4.html
@@ -104,8 +104,8 @@
 										<h2>Michael (Dell) Says I Know The Net</h2>
 									</header>
 									<img src="images/michael-says-i-know-the-net-1998.jpg" alt="Michael Says I Know The Net" height="309" width="400" />
-									<p>I've included this because I find it especially funny. The person who wrote the training, and the test, didn't know anything about networking, or "the net" and relied heavily on myself, and another person, for her information. In short, me and this other person basically wrote the training, and the test, for her.</p>
-									<p>But when it was all said and done, the two of us, who actually wrote the training, and the test, got in trouble because we hadn't completed this "mandatory" training requirement. The irony of it all made me save this certificate, and when I see it, I chuckle, because "I Know the Net".</p>
+									<p>I've included this because I find it especially funny. The person who wrote the training and the test didn't know anything about networking or "the net", and relied heavily on me and another person, for her information. In short, we basically wrote the training and the test for her.</p>
+									<p>When it was all said and done the two of us, who actually wrote the training and the test, got in trouble because we hadn't completed this "mandatory" training requirement. The irony of it all made me save this certificate, and when I see it, I chuckle, because "I Know the Net".</p>
 								</article>
 							</section>
 
