--- a/bio5.html
+++ b/bio5.html
@@ -86,7 +86,7 @@
 									</header>
 									<img src="images/excelsior-college-logo.jpg" alt="Excelsior College" height="100" width="350" />
 									<p>I graduated from <em>The University of the State of New York, Regents College</em>, since renamed to <em>Excelsior College</em>. My degree was in Liberal Arts, with depth areas in Russian Language and Psychology. This college is known for taking military training, and College-Level Examination Program (CLEP) test scores for a degree.</p>
-									<p>My Russian Language training in the military counted, as was as 127 Semester Hours of CLEP exams I had taken during my time in the US Army. My final GPA was 3.79 with 167 Semester Hours total.</p>
+									<p>My Russian Language training in the military counted toward my degree, as did 127 Semester Hours of CLEP exams I had taken during my time in the US Army. My final GPA was 3.79 with 167 Semester Hours total.</p>
 								</article>
 								<article>
 									<header>
