--- a/bio7.html
+++ b/bio7.html
@@ -56,14 +56,6 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">August 1, 1990</span>
-										<h2>I was Promoted to Staff Sergeant (e-6)</h2>
-									</header>
-									<img src="images/army-staff-sergeant.jpg" alt="" height="256" width="200" />
-									<p>I was promoted to Staff Sergeant (E-6) today.</p>
-								</article>
-								<article>
-									<header>
 										<span class="date">Sunday, July 1, 1990</span>
 										<h2>US Army Honorable Discharge &#151; The First One</h2>
 									</header>
@@ -102,6 +94,14 @@
 									</header>
 									<img src="images/army-commendation-medal-2nd-oak-leaf-cluster-03-22-1989-small-2.jpg" alt="US Army Commendation Medal — 2nd Oak Leaf Cluster" height="351" width="459" />
 									<p>For: "distinguishing himself by meritorious service while assigned as a Radio Teletypewriter Operator, Headquarters and Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas during the period of 24 September 1986 to 15 March 1989. He has consistently exceeded all standards and has set a precedence to emulate. He has been Soldier of the Quarter of Division Artillery, and Soldier of the Year of III Corps and Fort Hood. Sergeant McIntire's performance of duty reflects distinct credit on him, the 1st Cavalry Division, and the United States Army."</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">January 2, 1989</span>
+										<h2>I Was Awarded My First Good Conduct Medal</h2>
+									</header>
+									<img src="images/good-conduct-medal.jpg" alt="US Army Good Conduct Medal - First Award" height="180" width="400" />
+									<p>I was awarded the US Army Good Conduct Medal for three continuous years of active military service, from 3 January 1986 to 2 January 1989.</p>
 								</article>
 							</section>
 
