--- a/bio8.html
+++ b/bio8.html
@@ -54,19 +54,11 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">January 2, 1989</span>
-										<h2>I Was Awarded My First Good Conduct Medal</h2>
-									</header>
-									<img src="images/good-conduct-medal.jpg" alt="US Army Good Conduct Medal - First Award" height="180" width="400" />
-									<p>I was awarded the US Army Good Conduct Medal for three continuous years of active military service, from 3 January 1986 to 2 January 1989.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">1988</span>
+										<span class="date">May 21, 1988</span>
 										<h2>I was Promoted to Sergeant (E-5)</h2>
 									</header>
 									<img src="images/army-sergeant.jpg" alt="I was Promoted to Sergeant" height="263" width="235" />
-									<p>Sergeant and Staff Sergeant promotions happen by MOS and "points". Each month, promotion "points" were published, and if you were above the points listed, you were promoted. I always kept working on getting more points, by completing educational correspondence courses the Army provided, and other activities where I could. My efforts paid off and I was promoted in 1988.</p>
+									<p>Sergeant and Staff Sergeant promotions happen by MOS and "points". Each month, promotion "points" were published, and if you were above the points listed, you were promoted. I always kept working on getting more points, by completing educational correspondence courses the Army provided, and other activities where I could. My efforts paid off and I was promoted on May 21, 1988.</p>
 									<p><strong>Note:</strong> I wish I could remember how many points I had. The maximum number was 1,000. I think I was above 900.</p>
 								</article>
 								<article>
@@ -83,7 +75,7 @@
 										<h2>I Graduated "Honor Graduate" From The US Army Four Week Radio Teletypewriter Operator Course</h2>
 									</header>
 									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
-									<p>I graduated from the US Army Four Week (160 Hour) Radio Teletypewriter Operator Course today. The training was at Fort Hood, Texas.</p>
+									<p>I graduated from the US Army Four Week (160 Hour) Radio Teletypewriter Operator Course on this day as "Honor Graduate". The training was at Fort Hood, Texas.</p>
 								</article>
 								<article>
 									<header>
@@ -100,6 +92,14 @@
 									</header>
 									<img src="images/army-pldc-12-22-87-small.jpg" alt="Honor Graduate - PLDC" height="517" width="400" />
 									<p>Primary Leadership Development Course (PLDC) is the first of several Noncommissioned Officer Courses that is required for promotion. PLDC is required for promotion from Specialst 4 to Sergeant. It was a four-week course, during which I was selected as "Acting First Sergeant" for one of the four weeks (a rotating position). The training was held at Fort Hood, Texas, and I was selected as an Honor Graduate for the course.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">November 12, 1987</span>
+										<h2>I was awarded the US Army Achievement Medal &#151; Second Award</h2>
+									</header>
+									<img src="images/army-achievement-medal.jpg" alt="US Army Achievement Medal" height="187" width="400" />
+									<p>For: "meritorious achievement in support of the Reforger '87 exercise "Certain Strike". As a Radio Teletype Team Chief, SP4 McIntire was instrumental in maintaining outstanding commications support in a rapidly changing battlefield environment. His team was consistently prepared to accomplish all tasks in record time upon occupation of new sites. His tremendous contributions measurable assisted the 1st Cavalry Division Artillery Headquarters in accomplishing its mission during the challenging exercise. This outstanding performance of duty is in keeping with the highest traditions of the United States Army."</p>
 								</article>
 							</section>
 
