--- a/bio9.html
+++ b/bio9.html
@@ -56,14 +56,6 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">November 12, 1987</span>
-										<h2>I was awarded the US Army Achievement Medal &#151; Second Award</h2>
-									</header>
-									<img src="images/army-achievement-medal.jpg" alt="US Army Achievement Medal" height="187" width="400" />
-									<p>For: "meritorious achievement in support of the Reforger '87 exercise "Certain Strike". As a Radio Teletype Team Chief, SP4 McIntire was instrumental in maintaining outstanding commications support in a rapidly changing battlefield environment. His team was consistently prepared to accomplish all tasks in record time upon occupation of new sites. His tremendous contributions measurable assisted the 1st Cavalry Division Artillery Headquarters in accomplishing its mission during the challenging exercise. This outstanding performance of duty is in keeping with the highest traditions of the United States Army."</p>
-								</article>
-								<article>
-									<header>
 										<span class="date">August 26, 1987</span>
 										<h2>I was awarded the US Army Achievement Medal</h2>
 									</header>
@@ -77,6 +69,15 @@
 									</header>
 									<img src="images/army-commendation-medal-08-19-1987-small.jpg" alt="US Army Achievement Medal" />
 									<p>For: "distinguishing himself by meritorious achievement by being selected as the 1st Cavalry Division Soldier of the Quarter, Calendar Year 1987, while assigned to Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas, during the period 22 September 1986 to 31 August 1987. His superior knowledge, exemplary bearing, appearance and overall professionalism, enabled him to be selected as the most outstanding soldier of the quarter. His commitment to strive for perfection places him far above others of his grade and experience. He is an outstanding soldier and is truly deserving of the prestige and respect that he has earned through his untiring efforts and demonstrated abilities. Specialist Four McIntire's performance of duty reflects distinct credit on him, the 1st Cavalry Division, and the United States Army."</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">June 30, 1987</span>
+										<h2>I Was Awarded A Certificate Of Achievement &#151; Headquarters, Division Artillery, 1st Cavalry Division</h2>
+									</header>
+									<img src="images/certificate-of-achievement-06-30-87-redacted.jpg" alt="US Army Seal" height="309" width="400" />
+									<p>For: "Outstanding achievement today in being selected First Cavalry Division Artillery Soldier of the Quarter for the Third Quarter, 1987. The expertise you demononstrated in such areas as Military Bearing, Chain of Comand, Individual Weapons, Map Reading, Leadership, and a myriad of other subjects was most commendable and was clearly above that of your peers. Your knowledge, performance, and potential is most noteworthy. Your accomplishment is an example for all to emulate and reflects most favorable on yourself, your organization, and the First Cavalry Division Artillery."</p>
+									<p>This was the first step that led me to becoming Soldier of the Year for III Corps and Fort Hood in 1987.</p>
 								</article>
 								<article>
 									<header>
