--- a/bio6.html
+++ b/bio6.html
@@ -64,14 +64,6 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 9, 1992</span>
-										<h2>I Graduated From The U.S. Message Text Format Course</h2>
-									</header>
-									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
-									<p>I graduated from the US Army Four Day (32 Hour) U.S. Message Text Format Course. The training was at Fort Hood, Texas.</p>
-								</article>
-								<article>
-									<header>
 										<span class="date">January 2, 1992</span>
 										<h2>I was Awarded my Second Good Conduct Medal</h2>
 									</header>
@@ -102,6 +94,14 @@
 									</header>
 									<img src="images/army-byu-russian-12-21-90-small.jpg" alt="BYU Russian Language Refresher" height="309" width="400" />
 									<p>Attended two week intensive Russian Language refresher training at Brigham Young University in Provo, Utah.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">August 1, 1990</span>
+										<h2>I was Promoted to Staff Sergeant (e-6)</h2>
+									</header>
+									<img src="images/army-staff-sergeant.jpg" alt="" height="256" width="200" />
+									<p>I was promoted to Staff Sergeant (E-6) today.</p>
 								</article>
 							</section>
 
